# higher-order-motifs

./: .env.shared  .gitignore  .justfile  README.md  config.py  datasets.toml  justfile  loaders.py  pyproject.toml  requirements.in  requirements.txt  test.py
motifs_cache/: hospital_3_560438cffffe5d978c942f42c314bf3896e4368d.npz  (+6 more)
python-core/: pyproject.toml
python-core/src/config/: __init__.py
python-core/src/python_core/: __init__.py  graph.py  hypergraph.py  loaders.py  plot_utils.py  stats.py  utils.py
python-core/src/python_core/motifs/: __init__.py  esu.py  motifs1.py  motifs2.py  motifs3.py  motifs_count_base.py
python-core/src/python_core/triangle/: __init__.py  bfs_din_map.py  cetc.py  common.py  forward.py  kclist.py  orca.py
rust-core/: .gitignore  Cargo.toml  pyproject.toml
rust-core/.cargo/: config.toml
rust-core/rust-core/: Cargo.toml
rust-core/rust-core-bindings/: Cargo.toml
rust-core/rust-core-macros/: Cargo.toml
rust-core/rust-core-macros/src/: ct_map.rs  hoist_mod.rs  inherent.rs  lib.rs  loader.rs  remove_attr.rs  repeat.rs
rust-core/rust-core-tests/: Cargo.toml
rust-core/rust-core-tests/src/: lib.rs
rust-core/rust-core-tests/src/shared/: fingeprints.rs  graphlets.rs  mod.rs
rust-core/rust-core-tests/src/tests/: fingerprints.rs  mod.rs
rust-core/rust-core/src/: lib.rs
rust-core/rust-core/src/graph/: adj_list.rs  ct_map.rs  edge_collection.rs  error.rs  flat_adj_list.rs  hyperedge.rs  hypergraph.rs  mod.rs  serialize.rs  test.rs  trairs.rs  traits.rs  traits2.rs  types.rs  types2.rs  unweighted_hypergraph.rs  unweighted_hypergraph2.rs  weighted_hypergraph.rs
rust-core/rust-core/src/graph/adj_list/: _adjacency.rs  adjacency.rs  base.rs  inc_list.rs  incidence.rs  mod.rs
rust-core/rust-core/src/graph/unused/: _adj_mat.rs  _adj_mat2.rs  adj_mat2.rs  hyper_adj_list.rs
rust-core/rust-core/src/loader/: common.rs  conference.rs  datasets.rs  dblp.rs  descriptors.rs  enron.rs  error.rs  eu.rs  facebook_hs.rs  friendship_hs.rs  gene_disease.rs  geology.rs  high_school.rs  history.rs  hospital.rs  justice.rs  mod.rs  ndc_classes.rs  ndc_substances.rs  pacs.rs  primary_school.rs  wiki.rs  wiki_talk.rs  workspace.rs
rust-core/rust-core/src/misc/: clique.rs  common_neighbors.rs  cycle.rs  error.rs  hyper_inclusion_forest.rs  mod.rs  serialize.rs  sorting.rs  traversal.rs
rust-core/rust-core/src/motifs/: base.rs  compressed_motif.rs  compressed_node_set.rs  fingerprint.rs  mod.rs  motifs3.rs  types.rs
rust-core/rust-core/src/motifs/algorithms/: const_graphlets.rs  escape.rs  esu_based.rs  mod.rs  motifs3.rs  orca.rs
rust-core/rust-core/src/motifs/unused/: base.rs
rust-core/rust-core/src/test/: algos.rs  cache.rs  cts.rs  edge_set.rs  fingerprint.rs  graph.rs  loader.rs  mod.rs  motifs.rs
rust-core/rust-core/src/triangle/: cetc.rs  forward.rs  kclist.rs  mod.rs
rust-core/rust-core/src/triangle/cbs/: cbst1.rs  cbst2.rs  hcbs.rs  mod.rs
rust-core/rust-core/src/types/: bindings.rs  error.rs  mod.rs
rust-core/rust-core/src/types/graph/: adjacency.rs  base.rs  incidence.rs  mod.rs
rust-core/rust-core/src/types/graph/adj_list/: adj_list.rs  common.rs  mod.rs  traits.rs
rust-core/rust-core/src/types/graph/unused/: adjacency.rs  base.rs  bin_writer.rs  flat_adj_list.rs  incidence.rs
rust-core/rust-core/src/types/hypergraph/: edge_collection.rs  hyperadj_list.rs  hypercsr.rs  hyperedge.rs  hypergraph.rs  mod.rs
rust-core/rust-core/src/util/: const_operations.rs  misc.rs  mod.rs  permutations.rs  sorting_network.rs  submodules_initializer.rs
rust-core/src/: lib.rs
rust-core/src/graph/: adj_list.rs  adj_mat.rs  bin_writer.rs  flat_adj_list.rs  hypergraph.rs  loader.rs  mod.rs  types.rs
rust-core/src/hypergraph/: hypergraph.rs  mod.rs
rust-core/src/loader/: big.rs  common.rs  conference.rs  mod.rs  small.rs  wiki_talk.rs
rust-core/src/misc/: clique.rs  common_neighbors.rs  sorting.rs  traversal.rs
rust-core/src/motifs/: base.rs  mod.rs  motifs3.rs  orca.rs
rust-core/src/test/: cache.rs  mod.rs  motifs.rs
rust-core/src/triangle/: cetc.rs  common.rs  forward.rs  kclist.rs  mod.rs
rust-core/src/triangle/cbs/: cbst1.rs  cbst2.rs  hcbs.rs
rust-core/src/util/: submodules_initializer.rs
rust-core/stubs/rust_core/: __init__.py
rust-core/stubs/rust_core/_core/: __init__.pyi
rust-core/stubs/rust_core/_core/triangle/common/: __init__.pyi
rust-core/stubs/rust_core/_core/triangle/kclist/: __init__.pyi
rust-core/stubs/rust_core/core/: __init__.pyi
rust-core/stubs/rust_core/core/graph/: __init__.pyi
rust-core/stubs/rust_core/core/loader/: __init__.pyi
rust-core/stubs/rust_core/core/motifs/: __init__.pyi
rust-core/stubs/rust_core/core/triangle/: __init__.pyi
rust-core/stubs/rust_core/core/triangle/cetc/: __init__.pyi
rust-core/stubs/rust_core/core/triangle/forward/: __init__.pyi
rust-core/stubs/rust_core/graph/: __init__.py
rust-core/stubs/rust_core/librust_core.dylib.dSYM/Contents/: Info.plist
rust-core/stubs/rust_core/librust_core.dylib.dSYM/Contents/Resources/Relocations/aarch64/: librust_core.dylib.yml
rust-core/stubs/rust_core/motifs/: __init__.py
rust-core/stubs/rust_core/triangle/: __init__.py
rust-core/stubs/rust_core/triangle/cetc/: __init__.py
rust-core/stubs/rust_core/triangle/common/: __init__.py
rust-core/stubs/rust_core/triangle/forward/: __init__.py
rust-core/stubs/rust_core/triangle/kclist/: __init__.py
src/: __init__.py  (+9 more)
test-core/: pyproject.toml
test-core/src/test_core/: __init__.py  test_ad_hoc_algorithm.py  test_aggregation.py  test_execution_times.py  test_graph_display.py  test_loader_cache.py  test_loader_no_cache.py  test_orca.py  util.py
test-core/src/test_core/hypergraph/: test_dump_to_file.py  test_graph.py  test_induced_motifs.py  test_induced_subgraph.py
test-core/src/test_core/motifs/: orca.py
test-core/src/test_core/rust/: loader.py  test_clique.py  test_graph.py  test_loader.py  test_motifs3.py  util.py
test-core/src/test_core/triangle/: test_degree_ordering.py  test_neighbor_sort.py  test_triangle_counting.py  test_triangle_counting2.py
(+35 files in other folders)
