[project]
name = "higher-order-motifs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Mattia Marini", email = "marmattia26@gmail.com" }
]

dependencies = [ ]

[tool.uv.workspace]
members = [
    "python-core",
    "rust-core",
    "test-core",
]

[tool.ruff]
line-length = 120  # default is 88
