[workspace]
members = ["rust-core", "rust-core-macros", "rust-core-tests"]
resolver = "3"

[workspace.dependencies]
rust-core-macros = { path = "./rust-core-macros" }
rust-core = { path = "./rust-core" }
rust-core-tests = { path = "./rust-core-tests" }

hashbrown = "0.17.1"
foldhash = "0.2.0"
paste = "1.0.15"
indicatif = "0.18.4"

pyo3 = {version = "0.27.0", features = ["auto-initialize", "multiple-pymethods"]}
