[project]
name = "rust-core"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"


[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }, { file = "rust_core.pyi" }]

[tool.maturin]
python-source = "stubs"
module-name = "rust_core.core"
manifest-path = "rust-core/Cargo.toml"

[tool.pyo3-stub-gen]
generate-init-py = true 
