[project]
name = "test-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mattia Marini", email = "marmattia26@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [ 
  "rich",
  "python-core"
]

[tool.uv.sources]
python-core = { workspace = true }

[project.scripts]
all = "test_core:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
typeCheckingMode = "basic"
