[package]
name = "rust-core-tests"
version = "0.1.0"
edition = "2024"
# default-run = "all"

[dependencies]
rust-core = { workspace = true }
hashbrown = { workspace=true }
foldhash = { workspace=true }
paste = { workspace=true }
indicatif = { workspace=true }
seq-macro = { workspace=true }
num-traits = { workspace=true }
rand = { workspace=true }
nohash-hasher = { workspace=true }
rustc-hash = "1.1.0"
bit-set = { workspace=true }
