[package]
name = "rust-core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# name = "_rust_core"
crate-type = ["cdylib", "rlib"]


[dependencies]
pyo3 = { workspace = true }
pyo3-stub-gen = { workspace = true }

timed = "0.2.1"
bit-set = "0.10"
num-traits = "0.2"
rkyv = {version = "0.8.15", features = ["hashbrown-0_17"]}
itertools = "0.14.0"
inherent = "1.0.13"
duplicate = "2.0.1"
thiserror = "2.0.18"
ouroboros = "0.18.5"
rust-core-macros = { workspace = true }
seq-macro = "0.3.6"
log = "0.4.29"
csv = "1.2"
polars = {version="0.46.0", features=["lazy", "default"]}
better_default = "1.0.5"

serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

hashbrown = {workspace=true}
foldhash = {workspace=true}
paste = {workspace=true}
indicatif = {workspace=true}

